# embedded-ring-buffer

./: .gitignore  LICENSE  README.md  emb_rb.h
.github/workflows/: build.yml  publish.yml
benchmark/: CMakeLists.txt  benchmark.cpp
src/: emb_rb.c  emb_rb.cpp  emb_rb.h  emb_rb.hpp  rb_version.h
test/: CMakeLists.txt  emb_rb_tests.cc
utilities/format/: format.cfg  format.sh
utilities/scripts/: precommit.sh
utilities/version/: get_version.ps1  get_version.sh  version.json  version.sh
